Add sanity integration

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,27 +2,29 @@
 const { user } = Astro.locals;
 ---
 
-<nav>
-  <a href="/">Hjem</a>
+<div>
+  <nav>
+    <a href="/">Hjem</a>
 
-  {user && <a href="/profil">Profil</a>}
+    {user && <a href="/profil">Profil</a>}
 
-  {
-    user && (
-      <a id="sign-out" href="/auth/sign-out">
-        Logg ut, {user.name}
-      </a>
-    )
-  }
+    {
+      user && (
+        <a id="sign-out" href="/auth/sign-out">
+          Logg ut, {user.name}
+        </a>
+      )
+    }
 
-  {
-    !user && (
-      <a id="sign-in" href="/auth/feide">
-        Logg inn
-      </a>
-    )
-  }
-</nav>
+    {
+      !user && (
+        <a id="sign-in" href="/auth/feide">
+          Logg inn
+        </a>
+      )
+    }
+  </nav>
+</div>
 
 <script>
   const currentUrl = new URL(window.location.href);
@@ -34,3 +36,11 @@ const { user } = Astro.locals;
   $signIn?.setAttribute("href", `/auth/feide?redirectTo=${redirectTo}`);
   $signOut?.setAttribute("href", `/auth/sign-out?redirectTo=${redirectTo}`);
 </script>
+
+<style>
+  div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+</style>
