--- a/src/components/RegisterButton.astro
+++ b/src/components/RegisterButton.astro
@@ -1,5 +1,6 @@
 ---
 import { isRegistered, register, unregister } from "../api/registrations";
+import { getSpotRanges } from "../api/sanity/spot-ranges";
 
 const { user } = Astro.locals;
 const { id } = Astro.params;
@@ -23,6 +24,8 @@ if (Astro.request.method === "POST") {
   }
 }
 
+const spotRanges = await getSpotRanges(id);
+const hasSpotRanges = spotRanges && spotRanges.maxSpots > 0;
 const isUserRegistered = user && (await isRegistered(id, user.id));
 ---
 
@@ -37,7 +40,7 @@ const isUserRegistered = user && (await isRegistered(id, user.id));
 }
 
 {
-  user && !isUserRegistered && (
+  hasSpotRanges && user && !isUserRegistered && (
     <form method="post">
       <button name="action" value="register">
         Meld på
@@ -46,4 +49,8 @@ const isUserRegistered = user && (await isRegistered(id, user.id));
   )
 }
 
-{!user && <p>Du må være logget inn for å melde deg på arrangementet</p>}
+{
+  !user && hasSpotRanges && (
+    <p>Du må være logget inn for å melde deg på arrangementet</p>
+  )
+}
