--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import Header from "../components/Header.astro";
 ---
 
@@ -8,7 +9,8 @@ import Header from "../components/Header.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>echo - Linjeforeningen for informatikk</title>
+    <ViewTransitions />
   </head>
   <body>
     <Header />
@@ -17,6 +19,10 @@ import Header from "../components/Header.astro";
 </html>
 
 <style>
+  * {
+    box-sizing: border-box;
+  }
+
   body {
     font-family: system-ui, sans-serif;
     max-width: 800px;
