--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,8 @@ const { user } = Astro.locals;
   <nav>
     <a href="/">Hjem</a>
 
+    <a href="/arrangementer">Arrangementer</a>
+
     {user && <a href="/profil">Profil</a>}
 
     {
