--- a/src/pages/arrangement/[id].astro
+++ b/src/pages/arrangement/[id].astro
@@ -1,6 +1,6 @@
 ---
 import { marked } from "marked";
-import { getHappening } from "../../api/sanity/happenings";
+import { getHappening } from "../../data/sanity/happenings";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import RegisterButton from "../../components/RegisterButton.astro";
 import Registrations from "../../components/Registrations.astro";
