Remove view transitions

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,16 +1,14 @@
 ---
-import { ViewTransitions } from "astro:transitions";
 import Header from "../components/Header.astro";
 ---
 
-<html lang="no" transition:animate="none">
+<html lang="no">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>echo - Linjeforeningen for informatikk</title>
-    <ViewTransitions />
   </head>
   <body>
     <Header />
