Display earlier events

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,12 @@ const { user } = Astro.locals;
 
     <a href="/arrangementer">Arrangementer</a>
 
+    <a href="/for-studenter">For studenter</a>
+
+    <a href="/for-bedrifter">For bedrifter</a>
+
+    <a href="/om">Om oss</a>
+
     {user && <a href="/profil">Profil</a>}
 
     {
